Java pattern matching draft